Wed Nov  3 08:58:59 2010  Koichi Sasada  <ko1@atdot.net>

	* gc.c, vm.c, vm_core.h: remove USE_VALUE_CACHE option.

Wed Nov  3 07:47:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex#identify_string): parse multiple
	  regex options.  a patch from Heesob Park in [ruby-core:32988].

Wed Nov  3 07:33:57 2010  Tanaka Akira  <akr@fsij.org>

	* vm_method.c (rb_clear_cache_by_class): just return if the class has
	  no method.  reported by Eric Wong.  [ruby-core:32689]

Tue Nov  2 22:50:25 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/visitor.rb (initialize): push accessor
	  methods to subclass that actually uses them.

Tue Nov  2 22:47:08 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/visitor.rb (accept): switch to
	  a dispatch cache rather than case / when statement.

Tue Nov  2 21:46:52 2010  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: fix a typo.

Tue Nov  2 20:10:32 2010  Tajima Akio <artonx@yahoo.co.jp>

	* test/rake/test_tasks.rb: clear env var which is used by the test.
	  [ruby-dev:42508]

Tue Nov  2 00:25:54 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: win64 is just same with win32 about socket.
	  notice: but wince is not same.

Mon Nov  1 21:25:57 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* main.c: <stdlib.h> is needed, to introduce the getenv(3)
          prototype declaration.  Without it a C compiler shall infer
          the getenv type as "int getenv(...);", but this is totally
          wrong, especially when your machine's sizeof(int) and
          sizeof(char*) differs.  On such environment a return value
          of getenv(3), which is in fact a char*, might first casted
          into a int (loses data here), and then casted back to char*
          by automatic integral promotion fo fit to the prototype of
          ruby_set_debug_option().

Sun Oct 31 23:27:09 2010  Koichi Sasada  <ko1@atdot.net>
